@@ -15,6 +15,8 @@
 	    ...
 	  }
 
+	* Made sequence and its dependencies moveable. (mlimber)
+
 v22 2016-12-13
 
 	* Messages from violations of expectations now print collections
